change log level to SEVERE

--- a/test/resources/logging.properties
+++ b/test/resources/logging.properties
@@ -4,7 +4,7 @@ config=
 "logger".useParentHandlers=
 "logger".level=
 # FileHandler
-java.util.logging.FileHandler.level=WARNING
+java.util.logging.FileHandler.level=SEVERE
 java.util.logging.FileHandler.filter=
 java.util.logging.FileHandler.formatter=
 java.util.logging.FileHandler.encoding=
@@ -13,24 +13,24 @@ java.util.logging.FileHandler.count=
 java.util.logging.FileHandler.append=false
 java.util.logging.FileHandler.pattern=log.%u.%g.txt
 # ConsoleHandler
-java.util.logging.ConsoleHandler.level=WARNING
+java.util.logging.ConsoleHandler.level=SEVERE
 java.util.logging.ConsoleHandler.filter=
 java.util.logging.ConsoleHandler.formatter=
 java.util.logging.ConsoleHandler.encoding=
 # StreamHandler
-java.util.logging.StreamHandler.level=WARNING
+java.util.logging.StreamHandler.level=SEVERE
 java.util.logging.StreamHandler.filter=
 java.util.logging.StreamHandler.formatter=
 java.util.logging.StreamHandler.encoding=
 # SocketHandler
-java.util.logging.SocketHandler.level=WARNING
+java.util.logging.SocketHandler.level=SEVERE
 java.util.logging.SocketHandler.filter=
 java.util.logging.SocketHandler.formatter=
 java.util.logging.SocketHandler.encoding=
 java.util.logging.SocketHandler.host=
 java.util.logging.SocketHandler.port=
 # MemoryHandler
-java.util.logging.MemoryHandler.level=WARNING
+java.util.logging.MemoryHandler.level=SEVERE
 java.util.logging.MemoryHandler.filter=
 java.util.logging.MemoryHandler.size=
 java.util.logging.MemoryHandler.push=
